test/param/loop/paramForLoopWrongCountHigh.good
paramForLoopWrongCountHigh.chpl:1: error: count operators with positive count requires the range to have a low bound
